css/screen.css
/* ... */
/*------------------------------------*\
#GENERIC
\*------------------------------------*/

/*
    Generic: Page
    ---
    Global page styles + universal box-sizing:
*/

html {
	font-size: 16px;
	font-weight: var(--global-default-weight);
	line-height: 1.5;
	font-family: 'futura-pt', sans-serif;
	color: var(--color-neutral-dark);
	box-sizing: border-box;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	background-color: var(--color-alpha-light-x);
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

/*
* Remove text-shadow in selection highlight:
* https://twitter.com/miketaylr/status/12228805301
*
* Customize the background color to match your design.
*/

::-moz-selection {
	background: var(--color-alpha);
	color: white;
	text-shadow: none;
}

::selection {
	background: var(--color-alpha);
	color: white;
	text-shadow: none;
}

/*------------------------------------*\
#Elements
\*------------------------------------*/

/*
Elements: Images
---
Default markup for images to make them responsive
*/

img {
	max-width: 100%;
	vertical-align: top;
}

/*
    Elements: typography
    ---
    Default markup for typographic elements
*/

h1,
h2,
h3 {
	font-weight: 700;
}

h1 {
	font-size: 36px;
	line-height: 48px;
	margin: 0 0 24px;
}

h2 {
	font-size: 32px;
	line-height: 40px;
	margin: 0 0 24px;
}

h3 {
	font-size: 26px;
	line-height: 32px;
	margin: 0 0 24px;
}

h4,
h5,
h6 {
	font-size: 16px;
	font-weight: 600;
	line-height: 24px;
	margin: 0 0 24px;
}

p,
ol,
ul,
dl,
table,
address,
figure {
	margin: 0 0 24px;
}

ul,
ol {
	padding-left: 24px;
}

li ul,
li ol {
	margin-bottom: 0;
}

blockquote {
	font-style: normal;
	font-size: 23px;
	line-height: 32px;
	margin: 0 0 24px;
}

blockquote * {
	font-size: inherit;
	line-height: inherit;
}

figcaption {
	font-weight: 400;
	font-size: 12px;
	line-height: 16px;
	margin-top: 8px;
}

hr {
	border: 0;
	height: 1px;
	background: LightGrey;
	margin: 0 0 24px;
}

a {
	transition: all var(--global-transitionDuration-alpha);
	color: var(--color-input-alpha);
	outline-color: var(--color-alpha);
	outline-width: medium;
	outline-offset: 2px;
}

a:visited,
a:active {
	color: var(--color-input-alpha-x-light);
}

a:hover,
a:focus {
	color: var(--color-input-alpha-x-light);
}

label,
input {
	display: block;
}

select {
	width: 100%;
}

input::placeholder {
	color: var(--color-neutral-light);
}

span {
	font-weight: 700;
	font-size: 20px;
}
/*------------------------------------*\
#OBJECTS
\*------------------------------------*/

/*
    Objects: Row
    ---
    Creates a horizontal row that stretches the viewport and adds padding around children
*/

.o-row {
	position: relative;
	padding: 24px 24px 0;
}

/*
    Objects: Container
    ---
    Creates a horizontal container that sets de global max-width
*/

.o-container {
	margin-left: auto;
	margin-right: auto;
	max-width: 79.5em; /* 79.5 * 16px = 1272 */
	width: 100%;
}

.o-container__app {
	max-width: 30em;
}

/*
    Objects: List
    ---
    Small reusable object to remove default list styling from lists
*/

.o-list {
	list-style: none;
	padding: 0;
}

/*
    Object: Button reset
    ---
    Small button reset object
*/

.o-button-reset {
	border: none;
	margin: 0;
	padding: 0;
	width: auto;
	overflow: visible;
	background: transparent;

	/* inherit font & color from ancestor */
	color: inherit;
	font: inherit;

	/* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
	line-height: normal;

	/* Corrects font smoothing for webkit */
	-webkit-font-smoothing: inherit;
	-moz-osx-font-smoothing: inherit;

	/* Corrects inability to style clickable `input` types in iOS */
	-webkit-appearance: none;
}

/*
    Object: Hide accessible
    ---
    Accessibly hide any element
*/

.o-hide-accessible {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	border: 0;
}

/*
    Object: Button reset
    ---
    Small button reset object
*/

.o-button-reset {
	border: none;
	margin: 0;
	padding: 0;
	width: auto;
	overflow: visible;
	background: transparent;

	/* inherit font & color from ancestor */
	color: inherit;
	font: inherit;

	/* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
	line-height: normal;

	/* Corrects font smoothing for webkit */
	-webkit-font-smoothing: inherit;
	-moz-osx-font-smoothing: inherit;

	/* Corrects inability to style clickable `input` types in iOS */
	-webkit-appearance: none;
}

/*------------------------------------*\
#COMPONENTS
\*------------------------------------*/

.c-app {
	height: 100vh;
	grid-template-rows: auto 1fr;
}

.c-app__header {
	background-color: var(--color-neutral-x-light);
	display: none;
	box-shadow: var(--shadow-neutral);
	z-index: 1;
}

.c-app__container {
	margin: auto;
}

.c-app__grid {
	display: grid;
	grid-gap: calc(var(--global-baseline) * 5);
	justify-items: center;
}

.c-header__main {
	text-align: left;
	font-size: 40px;
}

.c-header__title {
	font-size: 24px;
	font-weight: 500;
	color: var(--color-subtitle);
	margin-bottom: 0;
}

.c-app__top {
	padding-top: 0;
}

.c-app__cards {
	display: flex;
	flex-flow: row;
	overflow-x: auto;
	overflow-y: hidden;
	white-space: nowrap;
	height: 348px;
	padding-top: 16px;
}

.c-app__card {
	margin-right: 16px;
	height: 312px;
	width: 240px;
	box-shadow: var(--shadow-box);
	padding: var(--global-whitespace-md);
}

.c-app__list {
	margin: var(--global-whitespace-md) calc(var(--global-baseline) * 3);
}

.c-app__listitem {
	height: 112px;
	width: 100%;
	box-shadow: var(--shadow-box);
	margin-top: 8px;
	padding: 16px;
}

.c-list__percentage {
	margin-left: var(--global-whitespace-sm);
}

.c-list__title {
	font-weight: 500;
	font-size: 24px;
}

.c-list__label--price {
	display: flex;
	flex-direction: row;
}

.c-card__title {
	font-weight: 500;
	font-size: 24px;
}

.c-card__price {
	font-weight: 400;
	color: var(--color-alpha-dark);
}
/* ... */

